# log4mongo-python

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README  README.rst  Vagrantfile  debian_requirements.txt  logging4mongo.py  provision_vagrant.sh  pyproject.toml  requirements.txt  setup.py  test.py
.github/: FUNDING.yml
debian/: changelog  control  copyright  rules
log4mongo/: __init__.py  handlers.py
log4mongo/test/: test_handlers.py  test_mongo_handler.py
test/: test_handlers.py
tests/: __init__.py  test_mongo_handler.py
